objects/copado__OrgDiff__c.object
<CustomObject>
    <fields>
        <fullName>copado__From_Date__c</fullName>
        <inlineHelpText>If a value is entered only modification after this date (inclusive) will be added in the Diff</inlineHelpText>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__From_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Source Org for which you would like to compare the Metadata. This Org will be the Org from which you would like to migrate Metadata.</inlineHelpText>
        <label>From Org</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Org Differences (From Org)</relationshipLabel>
        <relationshipName>FromOrgDiffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Last_Modified_By_Name__c</fullName>
        <inlineHelpText>If a value is entered, only modifications from this user will be included in the Diff.</inlineHelpText>
        <label>Last Modified By Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__To_Date__c</fullName>
        <inlineHelpText>If a value is entered only modification before this date (inclusive) will be added in the Diff</inlineHelpText>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__To_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Destination Org for which you would like to compare the Metadata and would like to migrate Metadata to. The resulting grid will show a list of differences with &apos;create&apos;, &apos;update&apos; and &apos;delete&apos; which apply to this Org.</inlineHelpText>
        <label>To Org</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Org Differences (To Org)</relationshipLabel>
        <relationshipName>ToOrgDiffs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>